Fix privacy policy layout on IE

--- a/src/components/page/index.css
+++ b/src/components/page/index.css
@@ -167,7 +167,7 @@
 
   .Page--privacy {
     & .Page-content {
-      flex: 0 0 30%;
+      flex: 0 0 450px;
       margin: auto;
       padding: 0;
       text-align: center;
@@ -214,12 +214,6 @@
 
     & .Page-button {
       margin: 30px 0 0;
-    }
-
-    & .Page-footer {
-      /*left: 0;
-      bottom: 0;
-      margin: auto 0 0;*/
     }
   }
 }
